# parikshak

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
dscanner/: __init__.py  cli.py  sbom.py
parikshak/: __init__.py  __main__.py  cli.py  db.py  sbom.py  scanner.py
