[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parikshak"
version = "1.0.0"
description = "Parikshak — Fast Docker image vulnerability scanner. Finds CVEs, secrets, and misconfigurations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Yash Dhakad"},
]
keywords = ["docker", "security", "vulnerability", "scanner", "container", "cve", "sbom", "parikshak"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.25",
    "rich>=13.0",
    "click>=8.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
parikshak = "dscanner.cli:main"

[project.urls]
Homepage = "https://github.com/yash2121ja/parikshak"
Repository = "https://github.com/yash2121ja/parikshak"
Issues = "https://github.com/yash2121ja/parikshak/issues"

[tool.setuptools.packages.find]
include = ["dscanner*"]
